@@ -102,8 +102,8 @@
 #define N_SAVE_PREPROC					"save_preproc"
 #define N_LOAD_HMM						"load_hmm"
 #define N_SAVE_HMM						"save_hmm"
-#define N_LOAD_SVM						"load_svm"
-#define N_SAVE_SVM						"save_svm"
+#define N_LOAD_CLASSIFIER				"load_classifier"
+#define N_SAVE_CLASSIFIER				"save_classifier"
 #define N_LOAD_KERNEL_INIT				"load_kernel_init"
 #define N_SAVE_KERNEL_INIT				"save_kernel_init"
 #define N_LOAD_LABELS					"load_labels"
