@@ -4,6 +4,7 @@
 	* This release contains major feature enhancements and bugfixes:
 		- Implement 2-norm Multiple Kernel Learning.
 		- Much extended documentation.
+		- Add Gaussian kernel for 32bit floating point features.
 	* Bugfixes:
 		- Tests are now run in the examples/interface directory, with paths set
 		to the installation directory.
